xmonad/.xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/bradley/.xmonad/build-x86_64-linux -o /home/bradley/.xmonad/xmonad-x86_64-linux

xmonad.hs:29:1: warning: [-Wtabs]
    Tab character found here, and in two further locations.
    Please use spaces instead.
   |
29 |                         , clickJustFocuses   = myClickJustFocuses
   | ^^^^^^^^

xmonad.hs:44:17: error: parse error on input ‘|’
   |
44 |                 | (key, sc) <- zip [xK_w, xK_e, xK_r] [2,1,3]
   |                 ^
